# obsidian-wiki

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODEX.md  LICENSE  Makefile  README.en.md  README.ko.md  README.md  THIRD_PARTY_NOTICES.md  docker-compose.dev.yml  docker-compose.ghcr.yml  docker-compose.test.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260413_0001_add_app_settings.py  20260413_0002_add_webdav_settings.py  20260413_0003_add_webdav_manifest_base_content.py  20260413_0004_add_default_theme.py  20260413_0005_add_timezone_setting.py  20260413_0006_add_theme_preset.py  20260414_0007_add_folder_note_setting.py  20260414_0008_add_templater_setting.py  20260415_0009_add_dataview_setting.py  20260415_0010_add_font_settings.py  20260415_0011_add_editor_split_preview_setting.py  20260415_0012_add_advanced_sync_settings.py  20260415_0013_add_git_identity_and_audit_logs.py  20260415_0014_add_dataview_show_source_setting.py  20260415_0015_add_katex_setting.py  20260415_0016_drop_edit_sessions.py
backend/app/: auth.py  config.py  main.py  schemas.py
backend/docker/: entrypoint.sh
backend/scripts/: bootstrap_alembic.py
backend/tests/: conftest.py  test_attachments.py  test_auth.py  test_config.py  test_conflict.py  test_dataview.py  test_health.py  test_indexer.py  test_search.py  test_settings.py  test_sync.py  test_tags.py  test_tasks.py  test_templater.py  test_vault.py  test_webdav_sync.py  test_wiki.py  test_wiki_links.py
deploy/: init.sql  (+3 more)
(+132 files in other folders)
